fix(indexing): omit sub-resource if main value is blank (#836)
Related: MSEARCH-1084
(cherry picked from commit af79982a34d63ccaba3d1accdbf37616ff9340ae)